# praesidium-ai

./: docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/rules/: windows_malware.yar
backend/tests/: test_health.py
frontend/: Dockerfile
frontend/praesidium-front/: package-lock.json  package.json  vite.config.ts
frontend/praesidium-front/src/: App.tsx  main.tsx
frontend/praesidium-front/src/components/: AlertTable.tsx  AlertTrendChart.tsx  ErrorBoundary.tsx  Header.tsx  Layout.tsx  LoadingSpinner.tsx  Severity.tsx  Sidebar.tsx  mode-toggle.tsx
frontend/praesidium-front/src/hooks/: useAlerts.ts
frontend/praesidium-front/src/pages/: Dashboard.tsx
